# visual-assist-example

./: CMakeLists.txt  readme.md
inc/base/: documentable.hpp
inc/def/: ObjectiveFunction.hpp  problem.hpp  variable.hpp
inc/om/: OptimizationMethodBase.hpp  OptimizationMethodDFORandomSearch.hpp  OptimizationMethodFactory.hpp  OptimizationMethodRandomSearch.hpp
src/: main_example_va.cpp
src/def/: problem.cpp  variable.cpp
src/om/: OptimizationMethodBase.cpp  OptimizationMethodDFORandomSearch.cpp  OptimizationMethodFactory.cpp  OptimizationMethodRandomSearch.cpp
tests/: problem.cpp
